# haiguru

./: .env.example  .github  .gitignore  CLAUDE.md  DB_DIFFERENCES.md  DECISIONS.md  EXAM_FLOW.md  GLM-Config  HAISIR_MAPPING.md  PLAN.md  README.md  alembic.ini  config.py  docker-compose.yml  llm_factory.py  populate_hierarchy.py  pyproject.toml  qa-sample.json  reranker_factory.py
.github/agents/: db-agent.agent.md  eval-pipeline.agent.md  test-agent.agent.md
.github/prompts/: new-migration.prompt.md  new-test.prompt.md
agent_docs/: data_model.md  etl_pipeline.md  llm_providers.md  ocr_pipeline.md  rag_pipeline.md
alembic/: env.py
alembic/versions/: 087545e17ff3_add_source_number_to_questions.py  5837e96d85fd_rename_source_number_to_source_question_.py  860b94e6712a_initial_schema.py  86c3aa515ee4_add_user_answer_is_correct_to_exam_.py  88c7cd6e2b11_initial_schema.py  e053aeea4654_initial_schema.py  eba53a33c107_initial_schema.py
db/: create_tables.py  models.py  ops.py
db/init/: 02_extra_databases.sql
docs/: decisions.md  eval_pipeline_plan.md  exam_flow.md  integration.md  rag_decisions.md
embed_pipeline/: __main__.py
etl_pipeline/: __main__.py  extract.py  llm_transform_answer_key.py  llm_transform_exercises.py  load.py  parse_exercises.py  transform.py
eval_pipeline/: __main__.py  grading.py  judge.py  load.py  ocr.py
glm_ocr/: __init__.py  __main__.py  client.py  runner.py  utils.py
pgadmin/: servers.json
rag/: __main__.py  query_rewriter.py  retriever.py
rag-experiments/: starter-pdf.py  starter-rag.py  starter.py
shared/: grading.py  normalization.py
tests/: conftest.py  test_db_ops.py  test_embed_pipeline.py  test_etl_extract.py  test_glm_ocr_runner.py  test_glm_ocr_utils.py
