[project]
name = "haiguru"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.18.4",
    "requests>=2.33.1",
    "pillow>=12.2.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.0",
    "llama-index-core>=0.12",
    "llama-index-vector-stores-postgres>=0.3",
    "llama-index-embeddings-huggingface>=0.4",
    "llama-index>=0.14.20",
    "llama-index-llms-ollama>=0.10.1",
    "llama-index-llms-anthropic>=0.6",
    "llama-index-embeddings-openai>=0.3",
    "openai>=1.0",
    "anthropic>=0.25",
    "openinference-instrumentation-llama-index>=4.3.9",
    "arize-phoenix-otel>=0.15.0",
    "opentelemetry-sdk>=1.41.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

